--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-不想看到你————————周某人.
+<html>
+    <head>
+         <title>王者峡谷</title>
+    </head>
+    <body>
+     <strong> 凤兮凤兮归故乡，遨游四海求其凰。</strong>
+      <p><i>三尺长剑，斩不尽相思情缠。</i></p>
+      <p><sub>邂逅你</sub>，是<sup>生生世世</sup>的宿命。</p>
+      <p>逆了苍天，踏破碧落黄泉。</p>
+      <p>直至地老天荒，独剩你我。</p>
+      <p><ins>剑之所至，心之所往。</ins></p>
+      <p>单身又活的太久是最大的痛，我来替你解脱！</p>
+      <p><del>长歌当哭，为君仗剑弑天下！</del></p>
+      <p>有凤来仪。</p>
+      <p>永生不过是场幻梦，唯吾所爱不朽。</p>
+      <p>何以缘起？何以缘灭？当以剑歌问之。</p>
+       <img src="C:\Users\Administrator\Desktop\image/libai.png" width="500" height="268"      />
+    </body>
+</html>
